--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@ int main() {
             chatMessagesContainer.scrollTop = chatMessagesContainer.scrollHeight;
 
             try {
-                const apiKey = ""; 
+                const apiKey = "AIzaSyALwVl1iwLavjaZW-Wx3FP2zJWoYzQfamU"; 
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
                 
                 const payload = { contents: chatHistory };
